After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734867 - ephy-web-view: do not replace broken lock with mixed content warning
ephy-web-view: do not replace broken lock with mixed content warning
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-15 15:59 UTC by Michael Catanzaro
Modified: 2014-08-16 12:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-web-view: do not replace broken lock with mixed content warning (1.12 KB, patch)
2014-08-15 15:59 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-08-15 15:59:46 UTC
The mixed content warning is only intended to be displayed on sites with
a secure primary connection. It's not relevant if the site is untrusted.
Comment 1 Michael Catanzaro 2014-08-15 15:59:47 UTC
Created attachment 283525 [details] [review]
ephy-web-view: do not replace broken lock with mixed content warning
Comment 2 Carlos Garcia Campos 2014-08-15 16:37:52 UTC
Comment on attachment 283525 [details] [review]
ephy-web-view: do not replace broken lock with mixed content warning

Cool
Comment 3 Michael Catanzaro 2014-08-16 12:45:12 UTC
Attachment 283525 [details] pushed as e91d30c - ephy-web-view: do not replace broken lock with mixed content warning