ephy-web-view: do not replace broken lock with mixed content warning

The mixed content warning is only intended to be displayed on sites with
a secure primary connection. It's not relevant if the site is untrusted.

https://bugzilla.gnome.org/show_bug.cgi?id=734867